# img-diff-web

./: Cargo.toml  Trunk.toml  vercel.json
.github/workflows/: node-check.yaml  preview.yaml  prod.yaml  rust-check.yaml
.vim/: coc-settings.json
src/: component.rs  image.rs  lib.rs  main.rs  web.rs
src/component/: image_diff_summary.rs  image_loader.rs  image_summary.rs  ported.rs
src/component/ported/: image_dropzone.rs
src/image/: diff_image.rs  load_image.rs
src/web/: expose_to_window.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: ionic.ts  main.tsx
web/src/components/: ImageDropzone.tsx
web/src/web-components/: ImageDropzone.tsx
